--- a/css/common.css
+++ b/css/common.css
@@ -303,6 +303,8 @@ th,td{
 	right: -22px;
 	background: #fff;
 	padding-top: 15px;
+	
+	display: none;
 }
 .cartWrap .cart:before{
 	content: "";
@@ -315,7 +317,7 @@ th,td{
 	right: 22px;
 }
 .cartWrap .list{
-	height: 300px;
+	height: 244px;
 	position: relative;
 	overflow: hidden;
 }
@@ -356,7 +358,7 @@ th,td{
 }
 .cartWrap .price{
 	float: left;
-	width: 60px;
+	width: 55px;
 	padding-top: 5px;
 	font: 12px/25px "微软雅黑";
 	color: #B62628;
@@ -366,6 +368,75 @@ th,td{
 	width: 26px;
 	font: 16px/25px "微软雅黑";
 	padding-top: 5px;
+	text-align: center;
+}
+/*购物车滚动条样式*/
+.cartWrap .scrollBar{
+	float: right;
+	width: 17px;
+	height: 244px;
+	background: #f1f1f1;
+}
+.cartWrap .scrollBar span{
+	display: block;
+	width: 17px;
+	height: 17px;
+}
+.scrollBar .topBtn{
+	background: url(../images/topBtn_bg.gif) 0 0;
+}
+.scrollBar .topBtn:hover{
+	background: url(../images/topBtn_bg.gif) 0 -34px;
+}
+.scrollBar .topBtn:active{
+	background: url(../images/topBtn_bg.gif) 0 -51px;
+}
+.scrollBar .bottomBtn{
+	background: url(../images/bottomBtn_bg.gif) 0 0;
+}
+.scrollBar .bottomBtn:hover{
+	background: url(../images/bottomBtn_bg.gif) 0 -34px;
+}
+.scrollBar .bottomBtn:active{
+	background: url(../images/bottomBtn_bg.gif) 0 -51px;
+}
+.cartWrap .slideWrap{
+	height: 210px;
+	position: relative;
+}
+.cartWrap .slide{
+	width: 17px;
+	height: 50px;
+	background: #cecece;
+	position: absolute;
+	top: 0;
+}
+.cartWrap .slide:hover{
+	background: #a9a9a9;
+}
+.cartWrap .slide:active{
+	background: #787878;
+}
+.cartWrap .total{
+	font: 12px/66px "微软雅黑";
+	height: 66px;
+	background: #f4f0ea;
+}
+.cartWrap .total span{
+	color: #c04646;
+}
+.cartWrap .total a{
+	display: inline-block;
+	width: 110px;
+	height: 36px;
+	line-height: 36px;
+	background: #B4A078;
+	color: #fff;
+	margin-left: 20px;
+	border-radius: 2px;
+}
+.cartWrap .total a:hover{
+	opacity: 0.8;
 }
 
 /*弹出导航样式*/
