--- a/css/index.css
+++ b/css/index.css
@@ -65,3 +65,67 @@
 	border: 3px solid #dfcead;
 	transform: scale(2);
 }
+
+/*----------品牌制造商----------*/
+#brand{
+	width: 1090px;
+	margin: 30px auto;
+}
+#brand .brandHead{
+	margin-bottom: 30px;
+}
+.brandHead h3{
+	font-size: 28px;
+	color: #666;
+	margin-right: 20px;
+	display: inline-block;
+}
+.brandHead .right{
+	padding-top: 18px;
+}
+#brand .bImg{
+	display: flex;
+	justify-content: space-between;
+}
+#brand .bBox{
+	width: 357px;
+	height: 320px;
+	overflow: hidden;
+	text-align: center;
+	position: relative;
+}
+#brand .bBox h4{
+	font-size: 24px;
+	color: #666;
+	font-weight: normal;
+	z-index: 2;
+	position: relative;
+	margin-top: 50px;
+}
+#brand .bBox span{
+	color: #666;
+	border-top: 1px solid #666;
+	display: inline-block;
+	padding-top: 20px;
+	margin-top: 20px;
+	z-index: 2;
+	position: relative;
+}
+#brand .bBox img{
+	position: absolute;	
+	top: 0;
+	left: 0;
+}
+#brand .bBox div{
+	position: relative;
+	overflow: hidden;
+	text-align: left;
+	padding-left: 20px;
+	width: 357px;
+	height: 155px;
+}
+#brand .bBox:last-child{
+	display: flex;
+	flex-wrap: wrap;
+	align-content: space-between;
+}
