--- a/css/index.css
+++ b/css/index.css
@@ -420,3 +420,63 @@
 	text-align: center;
 	margin-top: 10px;
 }
+
+/*----------居家----------*/
+.category{
+	width: 1090px;
+	margin: 40px auto;
+}
+.category header{
+	margin-bottom: 20px;
+}
+.category h3{
+	font-size: 28px;
+	color: #666;
+	margin-right: 10px;
+	display: inline;
+}
+.category header span{
+	border-left: 1px solid #666;
+	padding: 3px 0 0 5px;
+}
+.category .right{
+	padding-top: 5px;
+}
+.category .right ul,.category .more{
+	float: right;
+}
+.category .right li{
+	display: inline;
+}
+.category .more{
+	margin-left: 10px;
+}
+.category .right li a{
+	margin: 0 10px;
+}
+.category .categoryBigImg img{
+	width: 1090px;
+	height: 320px;
+	margin-bottom: 20px;
+}
+.category .categoryList{
+	display: flex;
+	justify-content: space-between;
+	text-align: center;
+}
+.category .categoryList li>a{
+	display: block;
+	width: 250px;
+	height: 250px;
+	overflow: hidden;
+}
+.category .categoryList img{
+	width: 250px;
+	height: 250px;
+}
+.category .categoryList p a{
+	line-height: 26px;
+}
+.category .categoryList span{
+	color: #d4282d;
+}
