--- a/css/index.css
+++ b/css/index.css
@@ -480,3 +480,79 @@
 .category .categoryList span{
 	color: #d4282d;
 }
+
+/*----------大家都在说----------*/
+#say{
+	background: #F4F0EA;
+	padding: 40px 0;
+}
+#say h3{
+	font-size: 28px;
+	color: #666;
+	margin-right: 10px;
+	display: inline;
+}
+#say header{
+	margin-bottom: 20px;
+}
+#say .content{
+	position: relative;
+}
+#say .carouselImgCon{
+	position: relative;
+	height: 505px;
+	overflow: hidden;
+}
+#say .content ul{
+	position: absolute;
+	left: 0;
+	width: 2000px;
+}
+#say .content li{
+	width: 353px;
+	height: 505px;
+	padding: 1px;
+	background: #fff;
+	float: left;
+	margin-right: 10px;
+}
+#say .content li a{
+	width: 353px;
+	height: 353px;
+	display: block;
+	overflow: hidden;
+}
+#say .content li img{
+	width: 353px;
+	height: 353px;
+}
+#say .content li div{
+	width: 345px;
+	height: 180px;
+	position: relative;
+	top: -40px;
+	background: #fff;
+	left: 4px;
+	padding: 20px;
+	box-sizing: border-box;
+}
+#say .content li p:nth-child(1){
+	color: #999;
+}
+#say .content li p:nth-child(2){
+	margin: 10px 0 15px;
+}
+#say .content li p .left{
+	font-size: 16px;
+	font-weight: bold;
+}
+#say .content li p .right{
+	font-size: 12px;
+	color: #B4A078;
+}
+#say .prev{
+	left: -60px;
+}
+#say .next{
+	right: -60px;
+}
