--- a/css/common.css
+++ b/css/common.css
@@ -514,3 +514,140 @@ th,td{
 #navFix .subnav{
 	padding-top: 10px;
 }
+
+/*----------底部----------*/
+footer{
+	text-align: center;
+}
+footer .message{
+	background: #fff;
+	padding: 40px 0;
+	border-top: 1px solid #e8e8e8;
+}
+footer .message .center{
+	display: flex;
+	justify-content: space-between;
+}
+footer .message .box{
+	width: 360px;
+}
+footer .message .box h4{
+	font-size: 16px;
+	font-weight: normal;
+	margin-bottom: 30px;
+}
+footer .message .phone{
+	font-size: 26px;
+}
+footer .message .workTime{
+	margin: 20px 0 30px;
+}
+footer .message .btn a{
+	display: inline-block;
+	width: 100px;
+	line-height: 28px;
+	border: 1px solid #666;
+	font-size: 16px;
+	margin: 0 10px;
+}
+footer .message .btn a:hover{
+	color: #fff;
+	background: #666;
+}
+footer .message .box:nth-child(2){
+	border-left: 1px solid #191919;
+	border-right: 1px solid #191919;
+	padding: 0 30px;
+	width: 370px;
+}
+footer .message .box:nth-child(2) p{
+	text-align: left;
+}
+footer .message dl{
+	margin-top: 30px;
+	line-height: 32px;
+}
+footer .message dt{
+	float: left;
+}
+footer .message dd{
+	float: left;
+	margin-left: 18px;
+}
+footer .message .disC{
+	color: #B4A078;
+	font-size: 12px;
+	margin-top: 5px;
+}
+footer .foot{
+	background: #414141;
+}
+footer .foot .title{
+	color: #fff;
+	display: flex;
+	height: 51px;
+	line-height: 51px;
+	padding: 40px 0;
+	font-size: 18px;
+	border-bottom: 1px solid #4f4f4f;
+	justify-content: space-around;
+}
+footer .foot .title div{
+	padding-left: 70px;
+}
+footer .foot .title div:nth-child(1){
+	background: url(../images/ico_08.gif) left no-repeat;
+}
+footer .foot .title div:nth-child(2){
+	background: url(../images/ico_09.gif) left no-repeat;
+}
+footer .foot .title div:nth-child(3){
+	background: url(../images/ico_10.gif) left no-repeat;
+}
+footer .foot .copy{
+	padding: 30px 0;
+	color: #999;
+	line-height: 20px;
+}
+footer .foot .copy a{
+	color: #999;
+}
+
+/*----------底部fix侧边栏----------*/
+#sideBar{
+	position: fixed;
+	width: 60px;
+	bottom: 20px;
+	right: 1%;
+	text-align: center;
+	background: #fff;
+}
+#sideBar .top{
+	border: 1px solid #ddd;
+	font-size: 12px;
+}
+#sideBar .top a{
+	display: block;
+	padding-top: 30px;
+	margin: 10px 0;
+}
+#sideBar .top a:nth-child(1){
+	background: url(../images/ico_11.gif) top center no-repeat;
+}
+#sideBar .top a:nth-child(2){
+	background: url(../images/ico_12.gif) top center no-repeat;
+}
+#sideBar .top a:nth-child(3){
+	background: url(../images/ico_13.gif) top center no-repeat;
+}
+#sideBar .back{
+	display: block;
+	height: 45px;
+	color: #fff;
+	padding-top: 20px;
+	background: #999 url(../images/ico_14.gif) center 8px no-repeat;
+	box-sizing: border-box;
+}
+#sideBar .back:hover{
+	background-color: #B4A078;
+}
