--- a/css/common.css
+++ b/css/common.css
@@ -651,3 +651,15 @@ footer .foot .copy a{
 #sideBar .back:hover{
 	background-color: #B4A078;
 }
+
+/*----------面包屑----------*/
+#position{
+	height: 60px;
+	line-height: 60px;
+	font-size: 12px;
+	color: #999;
+}
+#position a:hover{
+	text-decoration: underline;
+	color: #333;
+}
