--- a/css/product.css
+++ b/css/product.css
@@ -269,3 +269,105 @@
 #look div.noClick:hover{
 	background: #ddd;
 }
+
+/*----------详情评价 / 专题推荐----------*/
+/*详情样式*/
+#bottom{
+	margin-bottom: 80px;
+}
+#bottom .product{
+	float: left;
+	width: 750px;
+}
+#bottom .title{
+	height: 42px;
+	line-height: 42px;
+	border: 1px solid #E8E8E8;
+	background: #f5f5f5;
+}
+#bottom .title a{
+	display: inline-block;
+	width: 169px;
+	text-align: center;
+	border-right: 1px solid #E8E8E8;
+}
+#bottom .title .active{
+	background: #fff;
+	line-height: 41px;
+	border-top: 3px solid #B4A078;
+	margin-top: -1px;
+}
+#bottom .title span{
+	color: #B4A078;
+}
+#bottom table{
+	width: 100%;
+	margin: 30px auto;
+}
+#bottom td{
+	border-bottom: 1px dashed #E8E8E8;
+	height: 40px;
+}
+#bottom td:nth-of-type(odd){
+	text-indent: 30px;
+	width: 135px;
+}
+#bottom td:nth-of-type(even){
+	width: 240px;
+	color: #999;
+}
+#bottom .img p{
+	height: 200px;
+	background: #fff url(../images/original.png) no-repeat center; 
+}
+#bottom .problem{
+	margin: 80px 0;
+}
+#bottom .problem h3{
+	font-size: 18px;
+	background: #F5F5F5;
+	text-align: center;
+	line-height: 52px;
+}
+#bottom .problem dl{
+	margin-top: 30px;
+}
+#bottom .problem dt{
+	margin-bottom: 10px;
+}
+#bottom .problem dd{
+	color: #999;
+}
+
+/*评价样式*/
+#bottom .border{
+	border: 1px solid #E8E8E8;
+	border-top: none;
+	padding: 14px 14px 0 14px;
+}
+#bottom .eTitle{
+	border-bottom: 1px solid #eaeaea;
+}
+#bottom .eTitle>div{
+	float: left;
+	margin-right: 20px;
+	padding: 15px 0;
+	cursor: pointer;
+}
+#bottom .eTitle i{
+	width: 15px;
+	height: 15px;
+	margin-right: 10px;
+	display: inline-block;
+	background: url(../images/input_bg.png) no-repeat 0 -15px;
+	vertical-align: middle;
+}
+#bottom .eTitle span{
+	vertical-align: middle;
+}
+#bottom .eTitle .active i{
+	background: url(../images/input_bg.png) no-repeat 0 0px;
+}
+#bottom .eTitle .active span{
+	color: #B4A078;
+}
