购物车删除功能 各种小fix

--- a/css/common.css
+++ b/css/common.css
@@ -319,7 +319,7 @@ th,td{
 	background: #fff;
 	padding-top: 15px;
 	
-	display: block;
+	display: none;
 	
 	-moz-user-select: none;
 	-webkit-user-select: none;
